Achivement_2/k8s/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - path: /app
        backend:
          service:
            name: app-service
            port:
              number: 5000
      - path: /database
        backend:
          service:
            name: database-service
            port:
              number: 5432
